# midi_interp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  midi_standard_notes.txt  scratch_pad
src/common/: CMakeLists.txt
src/module1/: CMakeLists.txt
tests/: CMakeLists.txt  test1.cpp
